<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.baihui.yangxb.startapp.StartActivity">

    <android.support.v7.widget.CardView
        android:layout_width="340dp"
        android:layout_height="320dp"
        app:cardBackgroundColor="#5a9cff"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        android:visibility="visible"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:id="@+id/cv">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <View
                android:layout_alignParentStart="true"
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:background="#fff"
                />
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <android.support.design.widget.TextInputLayout
                android:textColorHint="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textSize="18sp"
                    android:hint="@string/Username"
                    android:textColor="#ffcc00"
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="2dp"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="18sp"
                        android:hint="@string/Password"
                        android:textColor="#ffcc00"
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:orientation="horizontal">
            <CheckBox
                android:layout_marginLeft="50dp"
                android:id="@+id/checkBox_password"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="记住密码" />

    <CheckBox
        android:id="@+id/checkBox_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="自动登录" />
</LinearLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <Button
                    android:id="@+id/bt_go"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/go"
                    android:textSize="18dp"
                    android:textColor="#fff"
                    >
                </Button>
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:textColor="#fff"
                    android:layout_marginLeft="2dp"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_password"
                    />
                <TextView
                    android:id="@+id/mobilelogin"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobilelogin"
                    />
            </LinearLayout>

        </LinearLayout>
        </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="340dp"
        android:layout_height="320dp"
        app:cardBackgroundColor="#5a9cff"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        android:visibility="gone"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:id="@+id/phone_cv">

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <View
                    android:layout_alignParentStart="true"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    />
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/mobilelogin"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="18sp"
                        android:hint="@string/phonenumber"
                        android:textColor="#ffcc00"
                        android:id="@+id/phone_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="18dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="1">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#fff"
                    android:orientation="horizontal"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="18sp"
                        android:hint="@string/checknumber"
                        android:textColor="#ffcc00"
                        android:id="@+id/phone_password"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/checknumber_get"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/getchecknumber"
                    android:textColor="#fff"
                    android:textSize="18sp"></Button>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="23dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <Button
                    android:textSize="18dp"
                    android:id="@+id/phone_go"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/go"
                    android:layout_marginRight="10dp"
                    android:textColor="#fff"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/phone_back"
                    android:layout_toStartOf="@+id/phone_back">
                </Button>

                <Button
                    android:textSize="18dp"
                    android:id="@+id/phone_back"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/back"
                    android:textColor="#fff"
                    android:layout_alignBaseline="@+id/phone_go"
                    android:layout_alignBottom="@+id/phone_go"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        android:layout_marginTop="21dp"
        android:layout_alignTop="@+id/cv"
        android:layout_alignRight="@+id/cv"
        android:layout_alignEnd="@+id/cv" />

</RelativeLayout>
